Revert "Merge remote-tracking branch 'origin/craft' into craft"
This reverts commit 277daa46e218d38f743ed3ba528e1b0637820d0d, reversing
changes made to ef1af0b32d0fe2c43099383b5b1e040e23d4025f.