@@ -3,24 +3,16 @@ package fr.iut.hev.root;
 import javafx.application.Application;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.Scene;
-import javafx.scene.image.ImageView;
-import javafx.scene.layout.StackPane;
+import javafx.scene.layout.Pane;
 import javafx.stage.Stage;
 
 import java.io.IOException;
-import java.util.Objects;
 
 public class Main extends Application {
-    public static Scene scene;
-//--enable-native-access=javafx.graphics
+    public Scene scene;
     @Override
     public void start(Stage stage) throws IOException {
-        StackPane root = new StackPane();
-        ImageView worldBackground = FXMLLoader.load(Main.class.getResource("view/world-background.fxml"));
-        StackPane land = FXMLLoader.load(Main.class.getResource("view/Stack-background+land.fxml"));
-        ImageView player  = FXMLLoader.load(Main.class.getResource("player.fxml"));
-        root.getChildren().addAll(worldBackground, land, player);
-        //scene = new Scene(root, 1920, 1072);
+        Pane root = FXMLLoader.load(Main.class.getResource("view/globalView.fxml"));
         scene = new Scene(root, 1920, 1056);
         stage.setTitle("ROOT");
         stage.setScene(scene);
